Changed 'baseUtils' namespace to 'OEUtils'

--- a/oe-combo.html
+++ b/oe-combo.html
@@ -208,7 +208,7 @@ specifying `listurl` property.
       behaviors: [
         Polymer.IronFormElementBehavior,
         Polymer.PaperInputBehavior,
-        baseUtils.FieldBehavior
+        OEUtils.FieldBehavior
       ],
 
       /**
