--- a/test/oe-combo.html
+++ b/test/oe-combo.html
@@ -42,8 +42,8 @@
   </test-fixture>
   <script>
     HTMLImports.whenReady(function () {
-      if (baseUtils.geturl) {
-        baseUtils.geturl = function (url) {
+      if (OEUtils.geturl) {
+        OEUtils.geturl = function (url) {
           return url;
         }
       }
