Specify item template as <template item-template> in light dom

--- a/demo/demo-oe-combo.html
+++ b/demo/demo-oe-combo.html
@@ -17,6 +17,7 @@
   <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
   <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
   <link rel="import" href="../../paper-styles/paper-styles.html">
+  <link rel="import" href="../../iron-image/iron-image.html">
   <link rel="import" href="custom-styles.html">
   <link rel="import" href="utils.html">
 
@@ -64,6 +65,23 @@
     </template>
   </demo-snippet>
 
+  <h3>Templating the Item</h3>
+  <demo-snippet>
+    <template>
+      <oe-combo label="Templated Country Items" displayproperty="d" valueproperty="c" listdata='[{"c":"IN","d":"India"},{"c":"CN","d":"China"},{"c":"DE","d":"Germany"},{"c":"FR","d":"France"},{"c":"GB","d":"United Kingdom"},{"c":"US","d":"United States"}]'>
+        <template item-template>
+        <paper-item>
+          <div class="layout horizontal flex">
+          <iron-image style="width:36px; height:24px;" sizing="contain" src="https://raw.githubusercontent.com/emcrisostomo/flags/master/png/256/{{item.c}}.png"></iron-image>        
+          <span class="layout flex centered">{{item.d}}</span>
+          <span>{{item.c}}</span>
+          </div>
+        </paper-item>
+          </template>
+      </oe-combo>
+    </template>
+  </demo-snippet>
+  
 </body>
 
 </html>
