reset selectedItem when value is undefined

--- a/oe-combo.html
+++ b/oe-combo.html
@@ -438,6 +438,7 @@ specifying `listurl` property.
             }
           } else {
             this.displayValue = '';
+            this.set('selectedItem', undefined);
             this.setValidity(true, undefined);
           }
         } else {
