--- a/oe-combo.html
+++ b/oe-combo.html
@@ -60,10 +60,6 @@ specifying `listurl` property.
       cursor: pointer;
     }
 
-    paper-menu {
-      max-height: 235px;
-      overflow: auto;
-    }
 
     .iron-selected {
       background: var(--combo-selected-backgroud, #e0e0e0);
@@ -77,6 +73,10 @@ specifying `listurl` property.
       --paper-item-selected: {
         background-color: #ccc;
       }
+    }
+    
+    .dropdown-content> ::content{
+      max-height: 235px;
     }
 
     #templateDiv {
