--- a/oe-combo.html
+++ b/oe-combo.html
@@ -93,39 +93,43 @@ specifying `listurl` property.
         <label hidden$="[[!label]]">
           <oe-i18n-msg msgid=[[label]]>[[label]]</oe-i18n-msg>
           <template is="dom-if" if={{required}}>
-            <span class="required"> *</span>
+            <span class="required" aria-label="mandatory"> *</span>
           </template>
         </label>
         <div id="templateDiv"></div>
-        <input is="iron-input" id="[[_inputId]]" aria-labelledby$="[[_ariaLabelledBy]]" aria-describedby$="[[_ariaDescribedBy]]"
+        <input is="iron-input"
+          role="combobox" aria-required$="[[required]]"
+          aria-autocomplete="both" aria-expanded="[[expand]]"
+          aria-haspopup="true" aria-owns="menu"
+          id="[[_inputId]]" aria-labelledby$="[[_ariaLabelledBy]]" aria-describedby$="[[_ariaDescribedBy]]"
           disabled$="[[disabled]]" bind-value="{{displayValue}}" invalid="{{invalid}}" prevent-invalid-input="[[preventInvalidInput]]"
           validator="[[validator]]" required$="[[required]]" autocomplete$="[[autocomplete]]" inputmode$="[[inputmode]]" name$="[[name]]"
           placeholder$="[[placeholder]]" readonly$="[[_readonly]]" size$="[[size]]" autocapitalize$="[[autocapitalize]]" autocorrect$="[[autocorrect]]"
           on-change="_onChange" tabindex$="[[tabindex]]" autosave$="[[autosave]]" results$="[[results]]" accept$="[[accept]]"
           multiple$="[[multiple]]" on-keyup="_keyup" on-keydown="_keydown" on-tap="_dropdownClick"/>
         <div suffix>
-          <iron-icon id="dropdownicon" icon="arrow-drop-down"></iron-icon>
+          <iron-icon id="dropdownicon" aria-label="Open" tabindex="-1" icon="arrow-drop-down"></iron-icon>
           <template is="dom-if" if={{showRefresh}}>
             <iron-icon icon="refresh" on-tap="_fetchListData"></iron-icon>
           </template>
         </div>
-        <oe-input-error invalid={{invalid}} placeholders={{errorPlaceholders}} error-message=[[errorMessage]]></oe-input-error>
+        <oe-input-error invalid={{invalid}} role="alert" placeholders={{errorPlaceholders}} error-message=[[errorMessage]]></oe-input-error>
       </paper-input-container>
       <!-- </div> -->
       <div>
         <iron-dropdown id="dropdown" vertical-align="{{verticalAlign}}" vertical-offset="{{verticalOffset}}" no-auto-focus opened={{expand}}>
           <paper-material tabindex="-1" class="dropdown-content" disabled$="[[disabled]]">
-            <paper-menu id="menu" multi$="[[multi]]">
+            <paper-menu id="menu" role="listbox" aria-labelledby$="[[_ariaLabelledBy]]" multi$="[[multi]]">
               <template id="itemlist" is="dom-repeat" items="{{_suggestions}}">
                 <template is="dom-if" if={{multi}}>
 
-                  <paper-item on-mouseover="onMouseOver" data-item={{item}} disabled$="[[disabledoption]]">
+                  <paper-item  role="option" on-mouseover="onMouseOver" data-item={{item}} disabled$="[[disabledoption]]">
                     <span>{{_getDisplayValue(item)}}</span>
                   </paper-item>
 
                 </template>
                 <template is="dom-if" if={{!multi}}>
-                  <paper-item on-mouseover="onMouseOver" on-tap="onItemSelected" data-item={{item}} disabled$="[[disabledoption]]">
+                  <paper-item  role="option" on-mouseover="onMouseOver" on-tap="onItemSelected" data-item={{item}} disabled$="[[disabledoption]]">
                     <span>{{_getDisplayValue(item)}}</span>
                   </paper-item>
                 </template>
@@ -547,7 +551,12 @@ specifying `listurl` property.
         } else if (e.keyCode == 13) {
           //Enter
           this._handleEnterEvent(e);
-        } else if (e.keyCode != 9) {
+        } else if(e.keyCode == 37 || e.keyCode == 39){
+          //ignore for left/right arrow keys
+        } else if (e.keyCode == 27){
+          //escape key
+          this.set('expand', false);
+        }else if (e.keyCode != 9) {
           //ignore tab in
           //Pass only the unselected text for search
           var searchTerm = this.displayValue;
