--- a/oe-combo.html
+++ b/oe-combo.html
@@ -82,7 +82,6 @@ specifying `listurl` property.
     #templateDiv {
       padding-bottom: 10px;
     }
-
   </style>
   <template>
 
@@ -97,16 +96,14 @@ specifying `listurl` property.
           </template>
         </label>
         <div id="templateDiv"></div>
-        <input is="iron-input"
-          role="combobox" aria-required$="[[required]]"
-          aria-autocomplete="both" aria-expanded="[[expand]]"
-          aria-haspopup="true" aria-owns="menu"
-          id="[[_inputId]]" aria-labelledby$="[[_ariaLabelledBy]]" aria-describedby$="[[_ariaDescribedBy]]"
-          disabled$="[[disabled]]" bind-value="{{displayValue}}" invalid="{{invalid}}" prevent-invalid-input="[[preventInvalidInput]]"
-          validator="[[validator]]" required$="[[required]]" autocomplete$="[[autocomplete]]" inputmode$="[[inputmode]]" name$="[[name]]"
-          placeholder$="[[placeholder]]" readonly$="[[_readonly]]" size$="[[size]]" autocapitalize$="[[autocapitalize]]" autocorrect$="[[autocorrect]]"
+        <input is="iron-input" role="combobox" aria-required$="[[required]]" aria-autocomplete="both" aria-expanded="[[expand]]"
+          aria-haspopup="true" aria-owns="menu" id="[[_inputId]]" aria-labelledby$="[[_ariaLabelledBy]]"
+          aria-describedby$="[[_ariaDescribedBy]]" disabled$="[[disabled]]" bind-value="{{displayValue}}" invalid="{{invalid}}"
+          prevent-invalid-input="[[preventInvalidInput]]" validator="[[validator]]" required$="[[required]]"
+          autocomplete$="[[autocomplete]]" inputmode$="[[inputmode]]" name$="[[name]]" placeholder$="[[placeholder]]"
+          readonly$="[[_readonly]]" size$="[[size]]" autocapitalize$="[[autocapitalize]]" autocorrect$="[[autocorrect]]"
           on-change="_onChange" tabindex$="[[tabindex]]" autosave$="[[autosave]]" results$="[[results]]" accept$="[[accept]]"
-          multiple$="[[multiple]]" on-keyup="_keyup" on-keydown="_keydown" on-tap="_dropdownClick"/>
+          multiple$="[[multiple]]" on-keyup="_keyup" on-keydown="_keydown" on-tap="_dropdownClick" />
         <div suffix>
           <iron-icon id="dropdownicon" aria-label="Open" tabindex="-1" icon="arrow-drop-down"></iron-icon>
           <template is="dom-if" if={{showRefresh}}>
@@ -117,20 +114,23 @@ specifying `listurl` property.
       </paper-input-container>
       <!-- </div> -->
       <div>
-        <iron-dropdown id="dropdown" vertical-align="{{verticalAlign}}" vertical-offset="{{verticalOffset}}" no-auto-focus opened={{expand}}>
+        <iron-dropdown id="dropdown" vertical-align="{{verticalAlign}}" vertical-offset="{{verticalOffset}}"
+          no-auto-focus opened={{expand}}>
           <paper-material tabindex="-1" class="dropdown-content" disabled$="[[disabled]]">
             <paper-menu id="menu" role="listbox" aria-labelledby$="[[_ariaLabelledBy]]" multi$="[[multi]]">
               <template id="itemlist" is="dom-repeat" items="{{_suggestions}}">
                 <template is="dom-if" if={{multi}}>
 
-                  <paper-item  role="option" on-mouseover="onMouseOver" data-item={{item}} disabled$="[[disabledoption]]">
-                    <span>{{_getDisplayValue(item)}}</span>
+                  <paper-item role="option" aria-label$="[[_getDisplayValue(item)]]" on-mouseover="onMouseOver"
+                    data-item={{item}} disabled$="[[disabledoption]]">
+                    <span>[[_getDisplayValue(item)]]</span>
                   </paper-item>
 
                 </template>
                 <template is="dom-if" if={{!multi}}>
-                  <paper-item  role="option" on-mouseover="onMouseOver" on-tap="onItemSelected" data-item={{item}} disabled$="[[disabledoption]]">
-                    <span>{{_getDisplayValue(item)}}</span>
+                  <paper-item role="option" aria-label$="[[_getDisplayValue(item)]]" on-mouseover="onMouseOver" on-tap="onItemSelected"
+                    data-item={{item}} disabled$="[[disabledoption]]">
+                    <span>[[_getDisplayValue(item)]]</span>
                   </paper-item>
                 </template>
               </template>
@@ -294,7 +294,7 @@ specifying `listurl` property.
       _selectedItemsChanged: function (e) {
         if (this.multi) {
           if (this.$.menu.selectedValues.sort().join() === this.__prevSelectedValues) {
-              return;
+            return;
           }
 
           var items = [];
@@ -326,7 +326,13 @@ specifying `listurl` property.
         }
 
       },
+      
+      //Overriding paper-input-behavior
+      _focusBlurHandler: function (event) {
+        Polymer.IronControlState._focusBlurHandler.call(this, event); // Forward the focus to the nested input.
 
+        // if (this.focused && !this._shiftTabPressed && this._focusableElement) this._focusableElement.focus();
+      },
 
       _fetchListData: function () {
         var self = this;
@@ -459,7 +465,7 @@ specifying `listurl` property.
             for (var idx = 0; idx < this.listdata.length; idx++) {
               var item = this.listdata[idx];
               if (!Array.isArray(this.value) && ((this.valueproperty && this.value == item[this.valueproperty]) ||
-                  this.value == item)) {
+                this.value == item)) {
                 matchFound = true;
                 // this._selectedItemsChanged(item);
                 this.displayValue = this._getDisplayValue(item);
@@ -471,7 +477,7 @@ specifying `listurl` property.
                 break;
               } else {
                 if ((this.valueproperty && this.value.indexOf(item[this.valueproperty]) > -1) || this.value.indexOf(
-                    item) > -1) {
+                  item) > -1) {
                   selectedItemsIndex.push(idx);
                   this.displayValue += ((numberOfRecords == 0 ? "" : ", ") + (this._getDisplayValue(item)));
                   numberOfRecords++;
@@ -551,12 +557,12 @@ specifying `listurl` property.
         } else if (e.keyCode == 13) {
           //Enter
           this._handleEnterEvent(e);
-        } else if(e.keyCode == 37 || e.keyCode == 39){
+        } else if (e.keyCode == 37 || e.keyCode == 39) {
           //ignore for left/right arrow keys
-        } else if (e.keyCode == 27){
+        } else if (e.keyCode == 27) {
           //escape key
           this.set('expand', false);
-        }else if (e.keyCode != 9) {
+        } else if (e.keyCode != 9) {
           //ignore tab in
           //Pass only the unselected text for search
           var searchTerm = this.displayValue;
@@ -574,7 +580,7 @@ specifying `listurl` property.
           this._menuOpen(false);
         }
         var suggestionsMenu = this.$.menu;
-        this.async(function(){
+        this.async(function () {
           if (suggestionsMenu && typeof (suggestionsMenu) != 'undefined') {
             var selectedItem = suggestionsMenu.focusedItem;
             var index = 0;
@@ -584,7 +590,7 @@ specifying `listurl` property.
               index = index < this._suggestions.length - 1 ? index + 1 : 0;
             }
             suggestionsMenu.select(index);
-            this.inputElement.focus();
+            //this.inputElement.focus();
           }
         });
       },
@@ -599,7 +605,7 @@ specifying `listurl` property.
             index = index > 0 ? index - 1 : this._suggestions.length - 1;
             suggestionsMenu.select(index);
           }
-          this.inputElement.focus();
+          //this.inputElement.focus();
         }
       },
 
